# bootcamp-letsgetrusty

./: Cargo.toml  README.md
beginner/control_flow/src/: main.rs
beginner/data_types/src/: main.rs
beginner/enums/src/: main.rs
beginner/functions/src/: main.rs
beginner/matching/src/: main.rs
beginner/option/: iflet.rs
beginner/option/src/: main.rs
beginner/option_and_result/: Cargo.toml
beginner/option_and_result/src/: main.rs
beginner/ownership/src/: exercise.rs  exercise2.rs  main.rs  mainX.rs  more_ownership.rs
beginner/slices/src/: exercise1.rs  exercise2.rs  main.rs
beginner/strings/src/: main.rs
beginner/structs/: aiexercise.rs  exercise1.rs  exercise3.rs
beginner/structs/src/: exercise1.rs  main.rs
beginner/tuple_structs/src/: main.rs
beginner/variables/different-variables/still-variables/one-more-init-time/: Cargo.toml
beginner/variables/src/: main.rs
experiments/debug_macro/: Cargo.toml
experiments/debug_macro/src/: main.rs
experiments/derives_macros/: Cargo.toml
experiments/derives_macros/src/: lib.rs  main.rs
experiments/parse_config_toml/: Cargo.toml
experiments/parse_config_toml/src/: main.rs
experiments/ray_tracing_in_week/: Cargo.toml
experiments/ray_tracing_in_week/src/: main.rs
